Refactored WordIndex into Dictionary for a better abstraction (the WordMatcher ieventually started doing everything the index was doing)